font size control as compound control: font size value input and font size set button

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <div class="editor-container">
         <div class="toolbar">
-            <button title="Read" id="getFileHandleButton"><i class="fa-solid fa-file-import"></i></button>
-            <button title="Write" id="writeFileButton"><i class="fa-solid fa-file-export"></i></button>
+            <button title="Read" id="getFileHandleButton"><i class="fas fa-file-import"></i></button>
+            <button title="Write" id="writeFileButton"><i class="fas fa-file-export"></i></button>
             <button title="Bold" onclick="execCmd('bold')"><i class="fas fa-bold"></i></button>
             <button title="Italic" onclick="execCmd('italic')"><i class="fas fa-italic"></i></button>
             <button title="Underline" onclick="execCmd('underline')"><i class="fas fa-underline"></i></button>
@@ -30,17 +30,8 @@
                 <option value="Tahoma">Tahoma</option>
                 <option value="Trebuchet MS">Trebuchet MS</option>
             </select>
-            <select title="Font Size" onchange="fontSize(this.value)" />
-            <option value="12">10</option>
-            <option value="12">12</option>
-            <option value="14">14</option>
-            <option value="16" selected>16</option>
-            <option value="18">18</option>
-            <option value="22">20</option>
-            <option value="22">22</option>
-            <option value="24">24</option>
-            <option value="28">28</option>
-            </select>
+            <input type="number" min="8" max="224" step="0.5" title="Font Size Selector" id="fontSizeSelector" value="16">
+            <button title="Font Size" onclick="fontSize(fontSizeSelector.value)"><i class="fas fa-font"></i></button>
             <select title="Style" onchange="execCmd('formatBlock', this.value)">
                 <option value="p">Normal</option>
                 <option value="h1">Heading 1</option>
