getting element styles from selection

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <option value="Tahoma">Tahoma</option>
                 <option value="Trebuchet MS">Trebuchet MS</option>
             </select>
-            <input type="number" min="8" max="224" step="0.5" title="Font Size Selector" id="fontSizeSelector" value="16">
+            <input type="number" min="8" max="224" step="0.5" title="Font Size Selector" id="fontSizeSelector">
             <button title="Font Size" onclick="fontSize(fontSizeSelector.value)"><i class="fas fa-font"></i></button>
             <select title="Style" onchange="execCmd('formatBlock', this.value)">
                 <option value="p">Normal</option>
