--- a/canvas.html
+++ b/canvas.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Canvas Drawing</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class="toolbar">
         <button title="Draw Text, English" onclick="drawTextEn()">English</button>
         <button title="Draw Text, Arabic" onclick="drawTextAr()">Arabic</button>
-        <input type="number" step="0.1" min=0 max=1 value="0.667" id="gAlpha" />
-        <button onclick="setBackground()">Set Background</button>
-        <button onclick="clearBackground()">Clear Background</button>
-        <span style="color: gray">/*To see the effect of lower alpha, set/clear background to erase the content*/</span>
+        <label for="gAlpha">General alpha:</label><input type="number" step="0.1" min=0 max=1 value="0.667" id="gAlpha" />
+        <label for="strokeLineWidth">Stroke Width:</label><input type="number" step="0.5" min=0 max=12 value="7" id="strokeLineWidth" />
+        <button onclick="imageBackground()">Image Background</button>
+        <button onclick="colorBackground()">Color Background</button>
+        <span style="color: gray">/*To see the effect of lower alpha/linewidth, set background to erase the content*/</span>
     </div>
     <canvas id="canvas" width="1280" height="560" style="outline: thin solid blue;"></canvas>
     <script>
@@ -21,7 +21,7 @@
             const textCont = "with transparency"
             const ctx = document.getElementById("canvas").getContext("2d");
             ctx.strokeStyle = "lime";
-            ctx.lineWidth = 7;
+            ctx.lineWidth = strokeLineWidth.value;
             ctx.fillStyle = "fuchsia";
             ctx.globalAlpha = gAlpha.value;
             ctx.font = "112px serif";
@@ -31,20 +31,20 @@
             ctx.fillText(textCont, 5, 200);
         }
         function drawTextAr() {
-            const text = "الرموزالرموز()، ممتلئة ومحددة"
+            const text = "الرموز()، ممتلئة ومحددة"
             const textCont = "بشفافية"
             const ctx = document.getElementById("canvas").getContext("2d");
             ctx.strokeStyle = "lime";
-            ctx.lineWidth = 7;
+            ctx.lineWidth = strokeLineWidth.value;
             ctx.fillStyle = "fuchsia";
             ctx.globalAlpha = gAlpha.value;
             ctx.font = "112px serif";
-            ctx.strokeText(text, 116, 400);
-            ctx.fillText(text, 116, 400);
+            ctx.strokeText(text, 368, 400);
+            ctx.fillText(text, 368, 400);
             ctx.strokeText(textCont, 1000, 500);
             ctx.fillText(textCont, 1000, 500);
         }
-        function setBackground() {
+        function imageBackground() {
             var img = new Image();
             const ctx = document.getElementById("canvas").getContext("2d");
             img.onload = function () {
@@ -57,7 +57,7 @@
             };
             img.src = './image.jpg';
         }
-        function clearBackground() {
+        function colorBackground() {
             const ctx = document.getElementById("canvas").getContext("2d");
             ctx.globalAlpha = 1;
             ctx.fillStyle = "slateblue";
