do not disturb with page alerts

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <button title="Insert Image" onclick="execCmd('insertImage', prompt('Enter image URL:', 'http://'))"><i class="fas fa-image"></i></button>
             <button title="Code View" onclick="toggleCodeView()"><i class="fas fa-code"></i></button>
         </div>
+        <div class="toolbar" style="justify-content: flex-end;"><label for"idMessageFromPage">Message from page: </label><input type="text" id="idMessageFromPage" /></div>
         <div class="editor-wrapper">
             <div id="editor" contenteditable="true"></div>
             <textarea id="code-view" style="display:none;"></textarea>
