--- a/canvas.html
+++ b/canvas.html
@@ -15,63 +15,7 @@
         <span style="color: gray">/*To see the effect of lower alpha/linewidth, set background to erase the content*/</span>
     </div>
     <canvas id="canvas" width="1280" height="560" style="outline: thin solid blue;"></canvas>
-    <script>
-        function drawTextEn() {
-            const text  = "Glyphs(), filled and stroked "
-            const textCont = "with transparency"
-            const ctx = document.getElementById("canvas").getContext("2d", {
-                willReadFrequently: true, // will force the use of a software (instead of hardware accelerated) 2D canvas
-                                        // and can save memory when calling getImageData() frequently
-                desynchronyzed: true, // reduces the latency by desynchronizing the canvas paint cycle from the event loop
-            });
-            ctx.strokeStyle = "lime";
-            ctx.lineWidth = strokeLineWidth.value;
-            ctx.fillStyle = "fuchsia";
-            ctx.globalAlpha = gAlpha.value;
-            ctx.font = "112px serif";
-            ctx.strokeText(text, 5, 100);
-            ctx.fillText(text, 5, 100);
-            ctx.strokeText(textCont, 5, 200);
-            ctx.fillText(textCont, 5, 200);
-        }
-        function drawTextAr() {
-            const text = "الرموز()، ممتلئة ومحددة"
-            const textCont = "بشفافية"
-            const ctx = document.getElementById("canvas").getContext("2d", {
-                willReadFrequently: true, // will force the use of a software (instead of hardware accelerated) 2D canvas
-                                        // and can save memory when calling getImageData() frequently
-                desynchronyzed: true, // reduces the latency by desynchronizing the canvas paint cycle from the event loop
-            });
-            ctx.strokeStyle = "lime";
-            ctx.lineWidth = strokeLineWidth.value;
-            ctx.fillStyle = "fuchsia";
-            ctx.globalAlpha = gAlpha.value;
-            ctx.font = "112px serif";
-            ctx.strokeText(text, 368, 400);
-            ctx.fillText(text, 368, 400);
-            ctx.strokeText(textCont, 1000, 500);
-            ctx.fillText(textCont, 1000, 500);
-        }
-        function imageBackground() {
-            var img = new Image();
-            const ctx = document.getElementById("canvas").getContext("2d");
-            img.onload = function () {
-                ctx.save();
-                const pattern = ctx.createPattern(img, "repeat");
-                ctx.globalAlpha = 1;
-                ctx.fillStyle = pattern;
-                ctx.fillRect(0, 0, canvas.width, canvas.height);
-                ctx.restore();
-            };
-            img.src = './image.jpg';
-        }
-        function colorBackground() {
-            const ctx = document.getElementById("canvas").getContext("2d");
-            ctx.globalAlpha = 1;
-            ctx.fillStyle = "slateblue";
-            ctx.fillRect(0, 0, canvas.width, canvas.height);
-            ctx.restore();
-        }
+    <script src="canvas.js">
     </script>
 </body>
 </html>
