--- a/canvas.html
+++ b/canvas.html
@@ -8,13 +8,18 @@
     <div class="toolbar">
         <button title="Draw Text, English" onclick="drawTextEn()">English</button>
         <button title="Draw Text, Arabic" onclick="drawTextAr()">Arabic</button>
+        <label for="fontzise">Font Size:</label><input type="number" step="8" min=40 max=120 value="112" id="fontsize" />
+        <button onclick="clearCanvas()">Clear Canvas</button>
         <label for="gAlpha">General alpha:</label><input type="number" step="0.1" min=0 max=1 value="0.667" id="gAlpha" />
         <label for="strokeLineWidth">Stroke Width:</label><input type="number" step="0.5" min=0 max=12 value="7" id="strokeLineWidth" />
-        <button onclick="imageBackground()">Image Background</button>
-        <button onclick="colorBackground()">Color Background</button>
-        <span style="color: gray">/*To see the effect of lower alpha/linewidth, set background to erase the content*/</span>
+        <button onclick="imageBackground()">Image Bkg</button>
+        <label for="<input type="canvasbkgColor">Canvas Bkg Color:</label>
+        <input type="color" id="canvasbkgColor" value=#6a5acd onchange="colorBackground(this.value)">
+        <button onclick="downloadCanvasContent()">Download Canvas Content</button>
     </div>
-    <canvas id="canvas" width="1280" height="560" style="outline: thin solid blue;"></canvas>
+    <div id="canvasbackground" style="width: 1280px; height: 560px; outline: thin solid blue;">
+        <canvas id="canvas" width="1280px" height="560px" style="outline: thin solid blue;"></canvas>
+    </div>
     <script src="canvas.js">
     </script>
 </body>
